--- a/Light.SocketIoClient.Net/Light.SocketIoClient.Demo/appsettings.json
+++ b/Light.SocketIoClient.Net/Light.SocketIoClient.Demo/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "clientSocket": {
+    "BroadcastUri": "wss://example.com/broadcast",
+    "Auth": "Bearer ..."
+  }
 }
