--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,20 @@ jobs:
       contents: read
       packages: write
 
+    env:
+      PROJECT_PATH: Light.SocketIoClient.Net/Light.SocketIoClient.Net/Light.SocketIoClient.Net.csproj
+
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
-
+        
+      - name: Extract version from tag
+        id: version
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          VERSION="${TAG#v}"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
@@ -26,15 +36,15 @@ jobs:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Restore
-        run: dotnet restore
+        run: dotnet restore $PROJECT_PATH
 
       - name: Build
-        run: dotnet build -c Release --no-restore
+        run: dotnet build $PROJECT_PATH -c Release --no-restore /p:Version=${{ env.VERSION }}
 
       - name: Pack
-        run: dotnet pack -c Release --no-build -o ./artifacts
+        run: dotnet pack $PROJECT_PATH -c Release --no-build -o ./artifacts /p:Version=${{ env.VERSION }}
 
-      - name: Upload package artifact to GitHub Actions
+      - name: Upload package artifact
         uses: actions/upload-artifact@v4
         with:
           name: nuget-package
