--- a/Light.SocketIoClient.Net/Light.SocketIoClient.Net/Light.SocketIoClient.Net.csproj
+++ b/Light.SocketIoClient.Net/Light.SocketIoClient.Net/Light.SocketIoClient.Net.csproj
@@ -10,12 +10,16 @@
 	<Authors>awesome-net-dev</Authors>
 	<Description>Lightweight socket client using socketIo protocol (eio=4)</Description>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
 	<RepositoryUrl>https://github.com/awesome-net-dev/light-socketioclient-net</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.1" />
     <PackageReference Include="System.IO.Pipelines" Version="10.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+  	<None Include="../../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
