feat: add cancellation support

--- a/Light.SocketIoClient.Net/Light.SocketIoClient.Demo/appsettings.json
+++ b/Light.SocketIoClient.Net/Light.SocketIoClient.Demo/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "clientSocket": {
     "BroadcastUri": "wss://example.com/broadcast",
-    "Auth": "Bearer ..."
+    "Headers": {
+      "Authorization": "Bearer ..."
+    }
   }
 }
